--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -1,8 +1,10 @@
-$fontSize: 0.7rem;
-$fontFamily: "Arial,Verdana,sans-serif";
+$fontSize: 0.75rem;
+$fontFamily: "Open Sans", sans-serif; //Roboto
 $fontWeight: normal;
 $color: #7c909b;
 $moz-osx-font-smoothing: grayscale;
 $webkit-font-smoothing: antialiased !important;
 $outline-width: 0;
-$textFontSize: 0.8rem;
+$textFontSize: 0.85rem;
+$mainMenu: 0.85rem;
+$subMenu: 0.85rem;
