--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -30,7 +30,7 @@ div[numberbox="true"] {
   .react-date-picker__button {
     border: none;
 
-    line-height: 1.8em;
+    line-height: 1.94em;
   }
   .react-date-picker {
     width: 100%;
@@ -41,6 +41,7 @@ div[numberbox="true"] {
   .react-date-picker__button__input {
     margin-left: 0px;
     min-width: inherit; //calc(4px + (4px * 3) + 6em + 0.434em);
+    font-size: 0.85rem;
   }
   button {
     margin-left: 0px;
