--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -4,10 +4,11 @@
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding-top: 15px;
   padding-bottom: 8px;
-  font-size: 0.8rem;
+  font-size: 0.85rem;
+  text-transform: uppercase;
   cursor: pointer; }
   .hptl-phase1-sideMenuBar .side-menu-title span {
-    font-size: 0.8rem; }
+    font-size: 0.85rem; }
 
 .hptl-phase1-sideMenuBar .side-menu-arrow {
   margin-top: 5px; }
@@ -37,7 +38,7 @@
   list-style-type: none;
   cursor: pointer;
   padding-top: 8px;
-  font-size: 0.7rem; }
+  font-size: 0.85rem; }
 
 .hptl-phase1-sideMenuBar li:before {
   content: "";
