--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -111,6 +111,12 @@
       padding-top: 25px;
     }
   }
+  .printImg {
+    height: 36px;
+    margin-top: 20px;
+    padding-left: 0px;
+    cursor: pointer;
+  }
 }
 .third-position {
   padding-top: 0.4%;
