--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
@@ -1,39 +1,17 @@
-.hptl-phase1-add-insurance-form {
+.hptl-phase1-network-plan-form {
   background: #fff;
   border-radius: 5px; }
-  .hptl-phase1-add-insurance-form label {
+  .hptl-phase1-network-plan-form label {
     font-size: 0.7rem; }
-  .hptl-phase1-add-insurance-form mark {
+  .hptl-phase1-network-plan-form mark {
     background: none;
     color: red; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    margin-top: 7px; }
-  .hptl-phase1-add-insurance-form .lbl-milldle {
-    padding-top: 30px; }
-  .hptl-phase1-add-insurance-form .lbl-resize label {
-    font-size: 16px;
-    background: #5f5f5f; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px; }
-  .hptl-phase1-add-insurance-form .Paper {
+  .hptl-phase1-network-plan-form .button-details {
+    padding: 10px; }
+  .hptl-phase1-network-plan-form .Paper {
     border: 1px solid #5f5f5f;
     padding: 10px; }
-  .hptl-phase1-add-insurance-form .bottom-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border-top: 1px solid #5f5f5f;
-    margin-top: 0.5%; }
-  .hptl-phase1-add-insurance-form .first-form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border: 1px solid #5f5f5f; }
-  .hptl-phase1-add-insurance-form .insurance-details {
-    padding: 20px;
-    padding-bottom: 5px; }
-  .hptl-phase1-add-insurance-form .colorPrimary div {
-    background-color: #dbad64; }
-    .hptl-phase1-add-insurance-form .colorPrimary div h2 {
-      color: #fff; }
+  .hptl-phase1-network-plan-form .label-pad {
+    padding-top: 25px; }
+  .hptl-phase1-network-plan-form .insurance-details {
+    border-bottom: 1px solid #000; }
