--- a/client/src/Components/InsuranceSetup/insurancesetup.scss
+++ b/client/src/Components/InsuranceSetup/insurancesetup.scss
@@ -1,5 +1,7 @@
 .insurancesetup {
-  padding: 1%;
+  padding-top: 3%;
+  padding-right: 3px;
+  padding-left: 3px;
 
   .insurance-footer {
     height: "60px";
