--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
@@ -1,4 +1,4 @@
-.hptl-phase1-add-insurance-form {
+.hptl-phase1-network-plan-form {
   background: #fff;
   border-radius: 5px;
   label {
@@ -8,24 +8,9 @@
     background: none;
     color: red;
   }
-  .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    margin-top: 7px;
-  }
-  .lbl-milldle {
-    padding-top: 30px;
-  }
-  .lbl-resize {
-    label {
-      font-size: 16px;
-      background: #5f5f5f;
-    }
-  }
 
-  .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
+  .button-details {
+    padding: 10px;
   }
 
   .Paper {
@@ -33,29 +18,10 @@
     padding: 10px;
   }
 
-  .bottom-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border-top: 1px solid #5f5f5f;
-    margin-top: 0.5%;
-  }
-
-  .first-form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border: 1px solid #5f5f5f;
+  .label-pad {
+    padding-top: 25px;
   }
   .insurance-details {
-    padding: 20px;
-    padding-bottom: 5px;
-  }
-
-  .colorPrimary {
-    div {
-      background-color: #dbad64;
-      h2 {
-        color: #fff;
-      }
-    }
+    border-bottom: 1px solid #000;
   }
 }
