--- a/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
+++ b/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
@@ -1,38 +1,14 @@
-.hptl-phase1-add-insurance-form {
+.hptl-phase1-add-sub-insurance-form {
   background: #fff;
   border-radius: 5px; }
-  .hptl-phase1-add-insurance-form label {
-    font-size: 0.7rem; }
-  .hptl-phase1-add-insurance-form mark {
+  .hptl-phase1-add-sub-insurance-form mark {
     background: none;
     color: red; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    margin-top: 7px; }
-  .hptl-phase1-add-insurance-form .lbl-milldle {
-    padding-top: 30px; }
-  .hptl-phase1-add-insurance-form .lbl-resize label {
-    font-size: 16px;
-    background: #5f5f5f; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px; }
-  .hptl-phase1-add-insurance-form .Paper {
-    border: 1px solid #5f5f5f; }
-  .hptl-phase1-add-insurance-form .bottom-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border-top: 1px solid #5f5f5f;
-    margin-top: 0.5%; }
-  .hptl-phase1-add-insurance-form .first-form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border: 1px solid #5f5f5f; }
-  .hptl-phase1-add-insurance-form .insurance-details {
-    padding: 20px;
-    padding-bottom: 5px; }
-  .hptl-phase1-add-insurance-form .colorPrimary div {
+  .hptl-phase1-add-sub-insurance-form .form-details {
+    padding-top: 2px; }
+  .hptl-phase1-add-sub-insurance-form .insurance-details {
+    border-bottom: 1px solid #e6e6e6; }
+  .hptl-phase1-add-sub-insurance-form .colorPrimary div {
     background-color: #dbad64; }
-    .hptl-phase1-add-insurance-form .colorPrimary div h2 {
+    .hptl-phase1-add-sub-insurance-form .colorPrimary div h2 {
       color: #fff; }
