--- a/client/src/Components/InsuranceSetup/NetworkPlanList/NetworkPlanList.css
+++ b/client/src/Components/InsuranceSetup/NetworkPlanList/NetworkPlanList.css
@@ -1,26 +1,12 @@
 .hptl-phase1-add-insurance-form {
   background: #fff;
   border-radius: 5px; }
-  .hptl-phase1-add-insurance-form label {
-    font-size: 0.7rem; }
-  .hptl-phase1-add-insurance-form mark {
-    background: none;
-    color: red; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    margin-top: 7px; }
-  .hptl-phase1-add-insurance-form .form-details {
-    padding: 5px;
-    padding-bottom: 0px; }
-  .hptl-phase1-add-insurance-form .Paper {
-    border: 1px solid #5f5f5f; }
-  .hptl-phase1-add-insurance-form .bottom-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border-top: 1px solid #5f5f5f;
-    margin-top: 0.5%; }
   .hptl-phase1-add-insurance-form .colorPrimary div {
     background-color: #dbad64; }
     .hptl-phase1-add-insurance-form .colorPrimary div h2 {
       color: #fff; }
+
+.model-set {
+  margin: 0 auto;
+  width: 160vh;
+  top: 10% !important; }
