--- a/client/src/Components/InsuranceSetup/NetworkPlanList/NetworkPlanList.scss
+++ b/client/src/Components/InsuranceSetup/NetworkPlanList/NetworkPlanList.scss
@@ -1,34 +1,6 @@
 .hptl-phase1-add-insurance-form {
   background: #fff;
   border-radius: 5px;
-  label {
-    font-size: 0.7rem;
-  }
-  mark {
-    background: none;
-    color: red;
-  }
-  .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    margin-top: 7px;
-  }
-
-  .form-details {
-    padding: 5px;
-    padding-bottom: 0px;
-  }
-
-  .Paper {
-    border: 1px solid #5f5f5f;
-  }
-
-  .bottom-details {
-    padding: 5px;
-    padding-bottom: 0px;
-    border-top: 1px solid #5f5f5f;
-    margin-top: 0.5%;
-  }
 
   .colorPrimary {
     div {
@@ -38,4 +10,10 @@
       }
     }
   }
+}
+
+.model-set {
+  margin: 0 auto;
+  width: 160vh;
+  top: 10% !important;
 }
