--- a/client/src/Components/InsuranceSetup/insurancesetup.css
+++ b/client/src/Components/InsuranceSetup/insurancesetup.css
@@ -2,6 +2,9 @@
   padding-top: 3%;
   padding-right: 3px;
   padding-left: 3px; }
+  .insurancesetup .toggle-section {
+    margin: 10px;
+    margin-bottom: 0px; }
   .insurancesetup .insurance-footer {
     height: "60px";
     background-color: #000; }
