--- a/client/src/Components/InsuranceSetup/ServicePriceList/ServicePriceList.scss
+++ b/client/src/Components/InsuranceSetup/ServicePriceList/ServicePriceList.scss
@@ -5,6 +5,12 @@
     cursor: pointer;
     margin-top: 15px;
   }
+
+  th,
+  td {
+    font-size: 11px;
+    border-right: 1px solid #e6e6e6;
+  }
 }
 
 .Paper {
