--- a/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
+++ b/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
@@ -12,3 +12,7 @@
     background-color: #dbad64; }
     .hptl-phase1-add-sub-insurance-form .colorPrimary div h2 {
       color: #fff; }
+  .hptl-phase1-add-sub-insurance-form th,
+  .hptl-phase1-add-sub-insurance-form td {
+    font-size: 11px;
+    border-right: 1px solid #e6e6e6; }
