--- a/client/src/Components/InsuranceSetup/insurancesetup.scss
+++ b/client/src/Components/InsuranceSetup/insurancesetup.scss
@@ -3,6 +3,12 @@
   padding-right: 3px;
   padding-left: 3px;
 
+  .toggle-section {
+    margin: 10px;
+    margin-bottom: 0px;
+    // background-color: #f2f2f2;
+  }
+
   .insurance-footer {
     height: "60px";
     background-color: #000;
