--- a/client/src/Components/CommonSetup/common_setup.css
+++ b/client/src/Components/CommonSetup/common_setup.css
@@ -1,13 +1,11 @@
-.common_setup {
-  background: #f2f2f2; }
-  .common_setup .common-section {
-    border: 1px solid #d3d3d3;
-    margin: 10px;
-    margin-top: 0px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px; }
-  .common_setup .toggle-section {
-    margin: 10px;
-    margin-bottom: 0px;
-    background-color: #f2f2f2; }
+.common_setup .common-section {
+  border: 1px solid #d3d3d3;
+  margin: 10px;
+  margin-top: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px; }
+
+.common_setup .toggle-section {
+  margin: 10px;
+  margin-bottom: 0px; }
