--- a/client/src/Components/CommonSetup/common_setup.scss
+++ b/client/src/Components/CommonSetup/common_setup.scss
@@ -1,17 +1,16 @@
-.common_setup{
-    background: #f2f2f2;
-.common-section{
+.common_setup {
+  // background: #f2f2f2;
+  .common-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
     margin-top: 0px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
-}
-.toggle-section{
+  }
+  .toggle-section {
     margin: 10px;
     margin-bottom: 0px;
-    background-color: #f2f2f2;
-}
-
+    // background-color: #f2f2f2;
+  }
 }
