--- a/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
+++ b/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
@@ -8,6 +8,10 @@
   .panel-layout {
     margin-top: 10px;
   }
+  .go-button {
+    cursor: pointer;
+    margin-top: 15px;
+  }
 
   .top-bar {
     padding: 10px;
