--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -278,4 +278,9 @@ $forntSize: 0.7rem;
   .row-bottom-space {
     margin-bottom: 15px;
   }
+  .divider {
+    height: 1px;
+    background-color: #485a63;
+    margin: 1px;
+  }
 }
