Lab Masters added

--- a/client/src/Components/common/Header/header.css
+++ b/client/src/Components/common/Header/header.css
@@ -19,7 +19,7 @@
   .hptl-phase1-header .drawerPaper {
     background: #292929; }
   .hptl-phase1-header .app_bar {
-    background: #3BB3B7;
+    background: #3bb3b7;
     box-shadow: none; }
   .hptl-phase1-header .notification {
     text-align: right; }
