--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -85,6 +85,8 @@
       margin: 0;
       padding: 0;
       list-style: none;
+      height: 65vh;
+      overflow: auto;
       li {
         margin: 4px 0;
         padding: 3px 0;
