--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,32 @@
+:global .algaeh-modal {
+  margin: 3% auto 0;
+  background-color: #fff;
+  padding: 0 10px;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 80%;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4); }
+  :global .algaeh-modal .popupHeader {
+    background: #dbad64;
+    padding: 5px 16px;
+    margin-bottom: 10px; }
+    :global .algaeh-modal .popupHeader h4 {
+      color: #fff;
+      font-size: 1.2rem;
+      padding: 0 0 3px;
+      line-height: 30px;
+      margin: 0; }
+  :global .algaeh-modal .popupInner {
+    height: 70vh;
+    overflow: auto; }
+  :global .algaeh-modal .popupFooter {
+    background: #f7f7f7;
+    border-top: 1px solid #e0e0e0;
+    padding: 5px 0; }
+    :global .algaeh-modal .popupFooter button {
+      float: right;
+      margin-left: 10px; }
+
 :global .tab-container .tab-button {
   font-size: 0.7rem;
   font-weight: normal;
