--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,42 @@
 $forntSize: 0.7rem;
 :global {
+  .algaeh-modal {
+    margin: 3% auto 0;
+    background-color: #fff;
+    padding: 0 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 80%;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4);
+
+    .popupHeader {
+      background: #dbad64;
+      padding: 5px 16px;
+      margin-bottom: 10px;
+      h4 {
+        color: #fff;
+        font-size: 1.2rem;
+        padding: 0 0 3px;
+        line-height: 30px;
+        margin: 0;
+      }
+    }
+    .popupInner {
+      height: 70vh;
+      overflow: auto;
+    }
+    .popupFooter {
+      background: #f7f7f7;
+      border-top: 1px solid #e0e0e0;
+      padding: 5px 0;
+
+      button {
+        float: right;
+        margin-left: 10px;
+      }
+    }
+  }
+
   .tab-container {
     .tab-button {
       font-size: $forntSize;
