--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,57 @@
 $forntSize: 0.7rem;
 :global {
+  .card {
+    margin-bottom: 15px;
+  }
+
+  .mrgn-tp-auto {
+    margin-top: auto;
+  }
+
+  .pain-scale-ul {
+    margin: auto;
+    padding: auto;
+    list-style: none;
+
+    li {
+      background: url("./assets/images/pain_scale.png") no-repeat center
+        transparent;
+      width: 31px;
+      height: 31px;
+      display: inline-block;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+    .pain-1 {
+      background-position: 0px 0px;
+    }
+    .pain-2 {
+      background-position: 0px -32px;
+    }
+    .pain-3 {
+      background-position: 0px -65px;
+    }
+    .pain-4 {
+      background-position: 0px -98px;
+    }
+    .pain-5 {
+      background-position: 0px -130px;
+    }
+    .pain-6 {
+      background-position: 0px -163px;
+    }
+    .active {
+      border-radius: 100%;
+      box-shadow: 0 3px 8px #00000063;
+    }
+  }
+
+  .pain_slider {
+    max-width: 350px;
+    margin: 20px;
+    padding: auto;
+  }
+
   .algaeh-modal {
     margin: 3% auto 0;
     background-color: #fff;
@@ -23,7 +75,8 @@ $forntSize: 0.7rem;
     }
     .popupInner {
       height: 70vh;
-      overflow: auto;
+      overflow-y: auto;
+      overflow-x: hidden;
     }
     .popupFooter {
       background: #f7f7f7;
