Medical Workbench Design Pattern Update and Design Changes inPatient Profile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,8 +33,7 @@
 
 :global .pain_slider {
   max-width: 350px;
-  margin: 20px;
-  padding: auto; }
+  margin: 10px; }
 
 :global .algaeh-modal {
   margin: 3% auto 0;
